Fix the timer image spacing

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@
 
 .timer img {
     width: 16px;
+    justify-content: center;
 }
 
 footer {
